Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanTextObj.quorum
Text t
t:SetValue("text")
boolean bool = cast(boolean, t)